added example work flow and completed vid 108

--- a/sklearn/introduction-to-sklearn-workflow.ipynb
+++ b/sklearn/introduction-to-sklearn-workflow.ipynb
@@ -1527,13 +1527,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "448e2b6b-09b5-464c-9146-c0d74fd4d321",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trying model with 10 estimators...\n",
+      "Model accuracy on test set: 73.77\n",
+      " \n",
+      "Trying model with 20 estimators...\n",
+      "Model accuracy on test set: 73.77\n",
+      " \n",
+      "Trying model with 30 estimators...\n",
+      "Model accuracy on test set: 73.77\n",
+      " \n",
+      "Trying model with 40 estimators...\n",
+      "Model accuracy on test set: 81.97\n",
+      " \n",
+      "Trying model with 50 estimators...\n",
+      "Model accuracy on test set: 77.05\n",
+      " \n",
+      "Trying model with 60 estimators...\n",
+      "Model accuracy on test set: 77.05\n",
+      " \n",
+      "Trying model with 70 estimators...\n",
+      "Model accuracy on test set: 80.33\n",
+      " \n",
+      "Trying model with 80 estimators...\n",
+      "Model accuracy on test set: 77.05\n",
+      " \n",
+      "Trying model with 90 estimators...\n",
+      "Model accuracy on test set: 77.05\n",
+      " \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5. Improve a Model i.e try different values for hyperparameters - in this case n_estimators\n",
+    "np.random.seed(42)\n",
+    "for i in range(10, 100, 10):\n",
+    "    print(f\"Trying model with {i} estimators...\")\n",
+    "    clf = RandomForestClassifier(n_estimators=i).fit(X_train, y_train)\n",
+    "    print(f\"Model accuracy on test set: {clf.score(X_test, y_test) * 100:.2f}\")\n",
+    "    print(\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "31bbe18c-27c0-40e6-a068-4bf65d4deecc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5. Improve a Model i.e try different values for hyperparameters"
+    "# From this, it seems the optimal number of estimators is 40\n",
+    "clf = RandomForestClassifier(n_estimators=40).fit(X_train, y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "9598bea6-83fc-4fd7-b25f-f9c87b227bd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6. Save a model and load it\n",
+    "import pickle\n",
+    "pickle.dump(clf, open(\"random_forst_model_1.pkl\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "227d5fe2-2a30-4618-8f93-a99c653b8312",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.819672131147541"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model = pickle.load(open(\"random_forst_model_1.pkl\", \"rb\"))\n",
+    "loaded_model.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5651c264-fea3-468a-829a-3344e1383872",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
