finished up to 24

--- a/pytorch/pytorch_fundamentals.ipynb
+++ b/pytorch/pytorch_fundamentals.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlCw/IjjdWzv+3bJrzOV4j",
+      "authorship_tag": "ABX9TyPsQSGDlgs4UMji98vBSEXr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GKzA0xMDn-dQ",
-        "outputId": "d4252e7a-a3f5-4c3f-ebd7-bbaec93e4daa"
+        "outputId": "02a30107-1ab2-4953-8a42-168cb1757ba0"
       },
       "outputs": [
         {
@@ -74,9 +74,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3aMOxsFkocHg",
-        "outputId": "7bc27469-a4ed-4b1c-c1dd-d6ba5678d671"
+        "outputId": "4a77563a-6b75-466d-8605-7a59ec1cb601"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,9 +114,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bNz39Y-bqLaX",
-        "outputId": "5e4dc46e-f036-482b-a55d-c92a5026d4ae"
+        "outputId": "94b1904e-d4a7-430d-9051-3decf71b04b2"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -126,7 +126,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -140,9 +140,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PxGwZEXDqY1X",
-        "outputId": "381f38f4-74c1-4bd6-b3d4-f1170fc755c4"
+        "outputId": "f653a91e-4ea1-4778-c457-ff7200c4c06a"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -152,7 +152,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -167,7 +167,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uzV0fMGMq34J",
-        "outputId": "10f1b505-bb1f-450c-e1ff-36817c15a144"
+        "outputId": "41ace75e-8af2-4e6a-caed-e72b6cedcdad"
       },
       "execution_count": 6,
       "outputs": [
@@ -195,7 +195,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wcGxWYoFrblR",
-        "outputId": "0dd3e744-6020-4897-8f31-33821f80afb1"
+        "outputId": "46f9ab04-02f9-4198-f6bc-9328d71a87af"
       },
       "execution_count": 7,
       "outputs": [
@@ -221,7 +221,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FsbtIkUprnVo",
-        "outputId": "5239b7da-c689-44ae-d33f-7c6cced062ca"
+        "outputId": "de587af7-6efd-4bfd-8271-601103f8c174"
       },
       "execution_count": 8,
       "outputs": [
@@ -247,9 +247,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3wVQ-08JseAE",
-        "outputId": "3a2adfa4-66ad-4441-e132-3f2ee3491370"
+        "outputId": "e8a164b2-5600-4cac-d0ad-8d4211341fdf"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -259,7 +259,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -276,9 +276,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BqCr4Naqsi-4",
-        "outputId": "beb5ff70-f73a-4a6b-83d7-aaafa59d6210"
+        "outputId": "d5308f0e-180f-4273-8a10-77e0c6f589f9"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -289,7 +289,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -303,9 +303,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_Tbwfkxps1P8",
-        "outputId": "eadf921b-c31e-4f79-a908-0fecc33bc5a5"
+        "outputId": "fa4215cc-7f20-4857-98e8-a53ed318fecc"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -315,7 +315,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 11
         }
       ]
     },
@@ -329,9 +329,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "muuGGLJ7s3X6",
-        "outputId": "e0c96bdd-175f-49e8-b637-1effd22ab973"
+        "outputId": "03386945-f704-4c4b-9984-e4bf4162e285"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -341,7 +341,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 12
         }
       ]
     },
@@ -355,9 +355,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_QzKMCXxs5Kc",
-        "outputId": "632f91ce-c712-494f-eaed-54cc10f18a3b"
+        "outputId": "016ccaf8-aa64-4e42-eeb8-30e1426ef7e9"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -367,7 +367,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 13
         }
       ]
     },
@@ -385,9 +385,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qqQZHgfes8su",
-        "outputId": "507a45db-b3bd-4235-bf9b-a675876efe11"
+        "outputId": "f0cd638c-a7d2-415f-f1a2-8eed9c5a1342"
       },
-      "execution_count": 21,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -399,7 +399,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 14
         }
       ]
     },
@@ -413,9 +413,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9pgqUltItPyU",
-        "outputId": "22a63cd9-9049-4766-9beb-21c7ce688afa"
+        "outputId": "774c31ce-716d-4170-cbde-453aac002224"
       },
-      "execution_count": 22,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -425,7 +425,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 15
         }
       ]
     },
@@ -439,9 +439,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9xlqfLI4tRnY",
-        "outputId": "38a1b146-41f2-4c9a-c736-593a33d379d6"
+        "outputId": "38700676-f763-4d0c-a14c-0d202bff84a2"
       },
-      "execution_count": 23,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -451,7 +451,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 16
         }
       ]
     },
@@ -465,9 +465,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0yp2C_VytToL",
-        "outputId": "8925f5a9-2a79-42b7-be5c-ab73aa2371f2"
+        "outputId": "bfa0f2a6-b22e-45de-9478-3b8bf481b130"
       },
-      "execution_count": 24,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -479,7 +479,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 17
         }
       ]
     },
@@ -493,9 +493,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OaQH_JIttjc1",
-        "outputId": "bfa150d8-67d4-4a21-ae80-e4b3433982ee"
+        "outputId": "0d28a633-1840-456b-99fb-62ddae87b5f5"
       },
-      "execution_count": 25,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -505,7 +505,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 18
         }
       ]
     },
@@ -549,21 +549,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JXlaogLetm2d",
-        "outputId": "1614f6f5-cb68-4d1c-bbc8-c11abd2f21ff"
+        "outputId": "abf6f51e-7bc4-4552-eeb9-a1345d6f021b"
       },
-      "execution_count": 29,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([[[0.7179, 0.1499, 0.9499, 0.4348],\n",
-              "         [0.1632, 0.2235, 0.1933, 0.5620],\n",
-              "         [0.9770, 0.3595, 0.6568, 0.5090]]])"
+              "tensor([[[0.6266, 0.4704, 0.8995, 0.6434],\n",
+              "         [0.5301, 0.6404, 0.8839, 0.3470],\n",
+              "         [0.5116, 0.2726, 0.9331, 0.8943]]])"
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 19
         }
       ]
     },
@@ -577,9 +577,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qk8L-oDtt7mb",
-        "outputId": "13f60526-0e69-4145-aa26-0a478232de8d"
+        "outputId": "1a9e7279-4b2a-46af-9d2e-4156fe9699ef"
       },
-      "execution_count": 30,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -589,7 +589,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 20
         }
       ]
     },
@@ -605,9 +605,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2p3tRW2Mt-R7",
-        "outputId": "e053bca3-195b-4d06-ff16-50f9136f2abd"
+        "outputId": "0e18ea66-a745-49c1-d083-758918e8328d"
       },
-      "execution_count": 31,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -617,7 +617,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 21
         }
       ]
     },
@@ -631,9 +631,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qVaIbsnLv77c",
-        "outputId": "14b12a18-69cf-413f-e3fb-cbcbb194e29f"
+        "outputId": "152d82a2-2336-4d1a-aa3b-605e440e0481"
       },
-      "execution_count": 32,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -643,17 +643,182 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Zeros and ones\n",
+        "\n",
+        "Sometimes you'll just want to fill tensors with zeros or ones.\n",
+        "\n",
+        "This happens a lot with masking (like masking some of the values in one tensor with zeros to let a model know not to learn them).\n",
+        "\n",
+        "Let's create a tensor full of zeros with `torch.zeros()`\n",
+        "\n",
+        "Again, the `size` parameter comes into play."
+      ],
+      "metadata": {
+        "id": "o3eDjv8Gv-GG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a tensor of zeros\n",
+        "zero_tensor = torch.zeros(size=(3,4,2))\n",
+        "zero_tensor"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RUxx8j0az8yL",
+        "outputId": "79565ebc-a584-4b09-b943-11c29a49e481"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[[0., 0.],\n",
+              "         [0., 0.],\n",
+              "         [0., 0.],\n",
+              "         [0., 0.]],\n",
+              "\n",
+              "        [[0., 0.],\n",
+              "         [0., 0.],\n",
+              "         [0., 0.],\n",
+              "         [0., 0.]],\n",
+              "\n",
+              "        [[0., 0.],\n",
+              "         [0., 0.],\n",
+              "         [0., 0.],\n",
+              "         [0., 0.]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Create a tensor of ones\n",
+        "ones_tensor = torch.ones(size=(3,4), dtype=int)\n",
+        "ones_tensor"
+      ],
       "metadata": {
-        "id": "o3eDjv8Gv-GG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N2oHjt_60HWG",
+        "outputId": "2819b029-321a-4e17-ed4a-3a338d57e272"
       },
-      "execution_count": 1,
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 1, 1, 1],\n",
+              "        [1, 1, 1, 1],\n",
+              "        [1, 1, 1, 1]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Creating a range and tensors like\n",
+        "\n",
+        "Sometimes you might want a range of numbers, such as 1 to 10 or 0 to 100.\n",
+        "\n",
+        "You can use `torch.arange(start, end, step)` to do so.\n",
+        "\n",
+        "Where:\n",
+        "\n",
+        "    start = start of range (e.g. 0)\n",
+        "    end = end of range (e.g. 10)\n",
+        "    step = how many steps in between each value (e.g. 1)\n"
+      ],
+      "metadata": {
+        "id": "zW3Bp0v_0dw6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Use torch.arange(), torch.range() is deprecated\n",
+        "zero_to_ten_deprecated = torch.range(0, 10) # Note: this may return an error in the future\n",
+        "\n",
+        "# Create a range of values 0 to 10\n",
+        "zero_to_ten = torch.arange(start=0, end=10, step=1)\n",
+        "zero_to_ten"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CmeX7VJ209r0",
+        "outputId": "9ede2069-119f-4b6c-a35a-a8095f59949a"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-29-a09072c806d9>:2: UserWarning: torch.range is deprecated and will be removed in a future release because its behavior is inconsistent with Python's range builtin. Instead, use torch.arange, which produces values in [start, end).\n",
+            "  zero_to_ten_deprecated = torch.range(0, 10) # Note: this may return an error in the future\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "Sometimes you might want one tensor of a certain type with the same shape as another tensor.\n",
+        "\n",
+        "For example, a tensor of all zeros with the same shape as a previous tensor.\n",
+        "\n",
+        "To do so you can use `torch.zeros_like(input)` or `torch.ones_like(input)` which return a tensor filled with zeros or ones in the same shape as the input respectively.\n"
+      ],
+      "metadata": {
+        "id": "LGP6Anp71Ec2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Can also create a tensor of zeros similar to another tensor\n",
+        "ten_zeros = torch.zeros_like(input=zero_to_ten) # will have same shape\n",
+        "ten_zeros"
+      ],
+      "metadata": {
+        "id": "2CK9IKmn1S5r"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
