--- a/pytorch/pytorch_fundamentals.ipynb
+++ b/pytorch/pytorch_fundamentals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOsYDEE+naEwvWGIamLTVnW",
+      "authorship_tag": "ABX9TyOxM886PgIHbUuMEv8KW9We",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,9 @@
       "source": [
         "## PyTorch Fundamentals\n",
         "\n",
-        "Resources: https://www.learnpytorch.io/00_pytorch_fundamentals/"
+        "Resources: https://www.learnpytorch.io/00_pytorch_fundamentals/\n",
+        "\n",
+        "SHIFT+CMD+SPACE for Docstring"
       ],
       "metadata": {
         "id": "gQlEnP5SoqQj"
