--- a/pytorch/nn_workflow_practice.ipynb
+++ b/pytorch/nn_workflow_practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPaNzpjNbfdppfDmipL+Pw8",
+      "authorship_tag": "ABX9TyPJEs+ONlplZFeTEtd6sgmE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "RycF4CzogF8e"
       },
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "saSwPWAQgrGr"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "TaBKyDVBg-BX"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -84,7 +84,7 @@
       "metadata": {
         "id": "KVIAfeXBhWHr"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -99,7 +99,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U9Ts3pSah9Di",
-        "outputId": "569f9f21-4ff8-49ad-dbe1-c727cc7c065a"
+        "outputId": "e765e3b2-911c-4d63-bb6e-0128b2c6395f"
       },
       "execution_count": 6,
       "outputs": [
@@ -152,7 +152,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U_7zDS6sitO2",
-        "outputId": "994fff4d-2696-4c2d-b839-b483211e025b"
+        "outputId": "20724ce9-d8ca-403d-8f56-014fad9bbe99"
       },
       "execution_count": 8,
       "outputs": [
@@ -161,8 +161,8 @@
           "data": {
             "text/plain": [
               "CircleModelV1(\n",
-              "  (layer_1): Linear(in_features=2, out_features=6, bias=True)\n",
-              "  (layer_2): Linear(in_features=6, out_features=3, bias=True)\n",
+              "  (layer_1): Linear(in_features=2, out_features=8, bias=True)\n",
+              "  (layer_2): Linear(in_features=8, out_features=3, bias=True)\n",
               "  (layer_3): Linear(in_features=3, out_features=1, bias=True)\n",
               ")"
             ]
@@ -174,9 +174,46 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Initial Predictions without Training\n",
+        "import math\n",
+        "untrained_preds = model1(X_test.to(device))\n",
+        "untrained_preds_to_int = untrained_preds.round()\n",
+        "untrained_preds_to_int[:5], y_test[:5]"
+      ],
       "metadata": {
-        "id": "R-Rkgb8Gi1_d"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R-Rkgb8Gi1_d",
+        "outputId": "3623285d-7372-4385-cca5-7f01b5ac5dca"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[0.],\n",
+              "         [1.],\n",
+              "         [0.],\n",
+              "         [1.],\n",
+              "         [-0.]], grad_fn=<SliceBackward0>),\n",
+              " tensor([1., 0., 1., 0., 1.]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a loss function\n"
+      ],
+      "metadata": {
+        "id": "o87Aw9o6Zy_x"
       },
       "execution_count": null,
       "outputs": []
