--- a/pytorch/nn_workflow_practice.ipynb
+++ b/pytorch/nn_workflow_practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJEs+ONlplZFeTEtd6sgmE",
+      "authorship_tag": "ABX9TyMF7jw4jErLNqato/iKhW79",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -177,43 +177,118 @@
       "source": [
         "# Initial Predictions without Training\n",
         "import math\n",
-        "untrained_preds = model1(X_test.to(device))\n",
-        "untrained_preds_to_int = untrained_preds.round()\n",
-        "untrained_preds_to_int[:5], y_test[:5]"
+        "with torch.inference_mode():\n",
+        "  untrained_preds = model1(X_test.to(device))\n",
+        "  untrained_preds_to_int = untrained_preds.round()\n",
+        "untrained_preds[:5], untrained_preds_to_int[:5], y_test[:5]"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "R-Rkgb8Gi1_d",
-        "outputId": "3623285d-7372-4385-cca5-7f01b5ac5dca"
+        "outputId": "4f3df58b-bc6c-4a89-bf35-f2e176664eb1"
       },
-      "execution_count": 28,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(tensor([[0.],\n",
+              "(tensor([[ 0.3045],\n",
+              "         [ 0.5390],\n",
+              "         [ 0.2294],\n",
+              "         [ 0.5790],\n",
+              "         [-0.0679]]),\n",
+              " tensor([[0.],\n",
               "         [1.],\n",
               "         [0.],\n",
               "         [1.],\n",
-              "         [-0.]], grad_fn=<SliceBackward0>),\n",
+              "         [-0.]]),\n",
               " tensor([1., 0., 1., 0., 1.]))"
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 31
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Create a loss function\n"
+        "# Create a loss function\n",
+        "\n",
+        "# For Regression, you may want MSE or MAE\n",
+        "# For Classification, Binary Cross Entropy or Categorical Cross Entropy\n",
+        "\n",
+        "loss_fn = nn.BCELoss() # requires inputs to have gone through the sigmoid activation function prior to input\n",
+        "\n",
+        "# loss_fn = nn.BCEWithLogitsLoss() # has sigmoid activation function built in\n",
+        "# This is somewhat similar to\n",
+        "# nn.Sequential(\n",
+        "#     nn.Sigmoid(),\n",
+        "#     nn.BCELoss()\n",
+        "# )\n",
+        "# nn.BCEWithLogitsLoss() is more numerically stable than plain nn.Sigmoid->nn.BCELoss but we'll do it the other way\n",
+        "# to get a sense of the work better\n",
+        "\n",
+        "optimiser = torch.optim.SGD(params=model1.parameters(), lr=0.1)\n"
       ],
       "metadata": {
         "id": "o87Aw9o6Zy_x"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# parameters getting updated by SGD\n",
+        "model1.state_dict()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KbAepHKO0a2I",
+        "outputId": "3811a683-68cf-477f-e3e4-a05811544b95"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('layer_1.weight',\n",
+              "              tensor([[ 0.6559,  0.6475],\n",
+              "                      [-0.2728, -0.0245],\n",
+              "                      [-0.6433, -0.2504],\n",
+              "                      [-0.2940, -0.4931],\n",
+              "                      [ 0.6968, -0.6576],\n",
+              "                      [-0.2427,  0.5973],\n",
+              "                      [-0.6657, -0.5961],\n",
+              "                      [-0.4022,  0.4858]])),\n",
+              "             ('layer_1.bias',\n",
+              "              tensor([ 0.1872,  0.3923, -0.1614, -0.6161, -0.1182,  0.0104, -0.1730, -0.6483])),\n",
+              "             ('layer_2.weight',\n",
+              "              tensor([[ 0.2580, -0.1306,  0.3463, -0.1854, -0.0450, -0.1453, -0.0555,  0.0951],\n",
+              "                      [ 0.1459, -0.2665,  0.2170,  0.2830, -0.0563, -0.3383,  0.2932,  0.3381],\n",
+              "                      [-0.0817, -0.1348,  0.3110,  0.1524,  0.1587, -0.1425, -0.1264,  0.2304]])),\n",
+              "             ('layer_2.bias', tensor([-0.3515, -0.1798,  0.0155])),\n",
+              "             ('layer_3.weight', tensor([[-0.1521, -0.5621, -0.0147]])),\n",
+              "             ('layer_3.bias', tensor([-0.2216]))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ky81QeJd0diY"
       },
       "execution_count": null,
       "outputs": []
