--- a/pytorch/nn_workflow_practice.ipynb
+++ b/pytorch/nn_workflow_practice.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMF7jw4jErLNqato/iKhW79",
+      "authorship_tag": "ABX9TyOzAoVkqKdXp4UAN+9ukDIJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "RycF4CzogF8e"
       },
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "saSwPWAQgrGr"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "TaBKyDVBg-BX"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -84,7 +84,7 @@
       "metadata": {
         "id": "KVIAfeXBhWHr"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -99,9 +99,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U9Ts3pSah9Di",
-        "outputId": "e765e3b2-911c-4d63-bb6e-0128b2c6395f"
+        "outputId": "35e80887-1602-41d7-bb1a-3acc265d8e48"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -116,7 +116,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -137,7 +137,7 @@
       "metadata": {
         "id": "SOjC6JMchlBh"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -152,9 +152,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U_7zDS6sitO2",
-        "outputId": "20724ce9-d8ca-403d-8f56-014fad9bbe99"
+        "outputId": "6bc5bca4-34f6-486f-91f7-32e5dfca3696"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -168,7 +168,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -179,37 +179,31 @@
         "import math\n",
         "with torch.inference_mode():\n",
         "  untrained_preds = model1(X_test.to(device))\n",
-        "  untrained_preds_to_int = untrained_preds.round()\n",
-        "untrained_preds[:5], untrained_preds_to_int[:5], y_test[:5]"
+        "untrained_preds[:5], y_test[:5]"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "R-Rkgb8Gi1_d",
-        "outputId": "4f3df58b-bc6c-4a89-bf35-f2e176664eb1"
+        "outputId": "a509d7a9-3393-48e8-e692-746d1d8e812f"
       },
-      "execution_count": 31,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(tensor([[ 0.3045],\n",
-              "         [ 0.5390],\n",
-              "         [ 0.2294],\n",
-              "         [ 0.5790],\n",
-              "         [-0.0679]]),\n",
-              " tensor([[0.],\n",
-              "         [1.],\n",
-              "         [0.],\n",
-              "         [1.],\n",
-              "         [-0.]]),\n",
+              "(tensor([[-0.1718],\n",
+              "         [-0.4396],\n",
+              "         [-0.1408],\n",
+              "         [-0.2943],\n",
+              "         [-0.1577]]),\n",
               " tensor([1., 0., 1., 0., 1.]))"
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 15
         }
       ]
     },
@@ -220,6 +214,7 @@
         "\n",
         "# For Regression, you may want MSE or MAE\n",
         "# For Classification, Binary Cross Entropy or Categorical Cross Entropy\n",
+        "sigmoid = torch.Sigmoid()\n",
         "\n",
         "loss_fn = nn.BCELoss() # requires inputs to have gone through the sigmoid activation function prior to input\n",
         "\n",
@@ -237,7 +232,7 @@
       "metadata": {
         "id": "o87Aw9o6Zy_x"
       },
-      "execution_count": 32,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -286,9 +281,159 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "tensor1 = torch.tensor([1, 2, 3])\n",
+        "tensor2 = torch.tensor([1, 9, 3])\n",
+        "torch.eq(tensor1, tensor2).sum(), torch.eq(tensor1, tensor2).sum().item(), torch.eq(tensor1, tensor2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uJr6NKeOQK64",
+        "outputId": "d94a14b7-7f23-4ae9-c19e-ec5a0c4f6fab"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor(2), 2, tensor([ True, False,  True]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create an Accuracy Function - https://www.youtube.com/watch?v=RYFViaaJxE8&ab_channel=MathsResource as a Percentage\n",
+        "def accuracy_fn(y_true, y_pred):\n",
+        "  correct = torch.eq(y_true, y_pred).sum().item()\n",
+        "  accuracy = (correct/len(y_pred)) * 100\n",
+        "  return accuracy"
+      ],
       "metadata": {
         "id": "ky81QeJd0diY"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Train Model\n",
+        "\n",
+        "# Logits are the raw outputs of our models - output from the forward() function of our model class.\n",
+        "# We want to go from logits -> prediction probabilities -> prediction label\n",
+        "\n",
+        "# We can convert Logits into Prediction Probabilities by passing them through an activation function\n",
+        "# Generally sigmoid for binary classification and softmax for multiclass classification\n",
+        "\n",
+        "# Logits from Model Output\n",
+        "y_logits = model1(X_test.to(device))\n",
+        "\n",
+        "# Pass through Sigmoid Function to get Prediction Probabilities\n",
+        "y_pred_probs = torch.sigmoid(y_logits)\n",
+        "\n",
+        "# Round the Prediction Probabilities to get Classification Category or Prediction Label.\n",
+        "y_preds = torch.round(y_pred_probs)\n",
+        "y_preds[:5], y_test[:5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xrFSE7SkQTz0",
+        "outputId": "91ccb6fd-48a8-493e-cadf-be4f87fb5c6f"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[0.],\n",
+              "         [0.],\n",
+              "         [0.],\n",
+              "         [0.],\n",
+              "         [0.]], grad_fn=<SliceBackward0>),\n",
+              " tensor([1., 0., 1., 0., 1.]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# As seen from above, y_preds has an extra redundant dimension\n",
+        "y_preds.size()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4gj50IhlUVo2",
+        "outputId": "9dfaeeee-369c-4f18-cb50-ceda42e5549e"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([200, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# So we squeeze the Tensor\n",
+        "y_preds.squeeze()[:5], y_test[:5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dpMKZkOGVQCU",
+        "outputId": "fa3ae16c-a4ca-41a4-9457-e0beb2cb0a8e"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([0., 0., 0., 0., 0.], grad_fn=<SliceBackward0>),\n",
+              " tensor([1., 0., 1., 0., 1.]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Building a Training and Testing Loop\n",
+        "torch.manual_seed(42)\n",
+        "\n",
+        "epochs = 1000\n"
+      ],
+      "metadata": {
+        "id": "l4wMJd2lVVhV"
       },
       "execution_count": null,
       "outputs": []
